--- a/data/projects.json
+++ b/data/projects.json
@@ -1,1 +1,9 @@
-[]
+[{
+  "title": "minimercado-projeto-fsw",         
+  "description": "Site de minimercado desenvolvido para a disciplina Fundamentos de Sistemas Web (PUCRS). Inclui catálogo de produtos, carrossel Bootstrap, formulário de cadastro com agendamento dinâmico e página de gestão local de pedidos usando JavaScript e localStorage.",  
+  "demoUrl": "https://g-reg04.github.io/minimercado-projeto-fsw/?",        
+  "repoUrl": "https://github.com/G-Reg04/minimercado-projeto-fsw",        
+  "date": "2025-08-27",        
+  "featured": true,         
+  "thumb": "string?"          
+}]
