feat(thumbs): adicionar gradientes dinâmicos para projetos
- Thumbnails de gradient automáticas para projetos sem imagem
- 15 gradientes modernos em paleta variada (azuis, roxos, verdes, etc)
- 8 ícones SVG relacionados a desenvolvimento
- Geração baseada em hash do título para consistência
- Efeitos visuais: pattern overlay, particles animadas, hover
- Projetos de exemplo adicionados para demonstração
- Fallback elegante quando thumb está vazio ou null

--- a/data/projects.json
+++ b/data/projects.json
@@ -1,9 +1,30 @@
-[{
-  "title": "minimercado-projeto-fsw",         
-  "description": "Site de minimercado desenvolvido para a disciplina Fundamentos de Sistemas Web (PUCRS). Inclui catálogo de produtos, carrossel Bootstrap, formulário de cadastro com agendamento dinâmico e página de gestão local de pedidos usando JavaScript e localStorage.",  
-  "demoUrl": "https://g-reg04.github.io/minimercado-projeto-fsw/?",        
-  "repoUrl": "https://github.com/G-Reg04/minimercado-projeto-fsw",        
-  "date": "2025-08-27",        
-  "featured": true,         
-  "thumb": "string?"          
-}]
+[
+  {
+    "title": "minimercado-projeto-fsw",         
+    "description": "Site de minimercado desenvolvido para a disciplina Fundamentos de Sistemas Web (PUCRS). Inclui catálogo de produtos, carrossel Bootstrap, formulário de cadastro com agendamento dinâmico e página de gestão local de pedidos usando JavaScript e localStorage.",  
+    "demoUrl": "https://g-reg04.github.io/minimercado-projeto-fsw/?",        
+    "repoUrl": "https://github.com/G-Reg04/minimercado-projeto-fsw",        
+    "tags": ["HTML", "CSS", "JavaScript", "Bootstrap", "LocalStorage"],
+    "date": "2025-08-27",        
+    "featured": true,         
+    "thumb": ""          
+  },
+  {
+    "title": "Sistema de Biblioteca",
+    "description": "Sistema web para gestão de biblioteca universitária desenvolvido como projeto acadêmico. Inclui controle de empréstimos, reservas, catálogo online e relatórios administrativos.",
+    "demoUrl": "https://biblioteca-sistema-demo.vercel.app",
+    "repoUrl": "https://github.com/G-Reg04/sistema-biblioteca",
+    "tags": ["React", "Node.js", "MySQL", "Express"],
+    "date": "2024-12-15",
+    "featured": false
+  },
+  {
+    "title": "Landing Page Responsiva",
+    "description": "Landing page moderna e responsiva para startup de tecnologia. Design clean, animações suaves e otimizada para conversões com formulário de contato integrado.",
+    "demoUrl": "https://landing-tech-startup.vercel.app",
+    "repoUrl": "https://github.com/G-Reg04/landing-page-tech",
+    "tags": ["HTML", "CSS", "JavaScript", "SASS", "Responsive"],
+    "date": "2024-11-20",
+    "featured": false
+  }
+]
