--- a/data/projects.json
+++ b/data/projects.json
@@ -8,5 +8,27 @@
     "date": "2025-08-27",        
     "featured": true,         
     "thumb": ""          
+  },
+
+  {
+    "title": "github-explorer-greg",         
+    "description": "Client-side GitHub user explorer with caching, filters, pagination, and a11y. Deployed on Vercel.",  
+    "demoUrl": "https://github-explorer-greg.vercel.app/",        
+    "repoUrl": "https://github.com/G-Reg04/github-explorer-greg",        
+    "tags": ["HTML", "CSS", "JavaScript", "API", "GitHub"],
+    "date": "2025-08-31",        
+    "featured": true,         
+    "thumb": ""          
+  },
+
+  {
+    "title": "promptboard-greg",
+    "description": "A fast, client-side prompt library with tags, instant search, one-click copy, and JSON/Markdown export. Tailwind + vanilla JS.",
+    "demoUrl": "https://promptboard-greg.vercel.app/",
+    "repoUrl": "https://github.com/G-Reg04/promptboard-greg",
+    "tags": ["HTML", "CSS", "JavaScript", "Tailwind", "Markdown", "JSON"],
+    "date": "2025-08-31",
+    "featured": true,
+    "thumb": ""
   }
 ]
